--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -21,7 +23,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -61,13 +63,18 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
+    // extra compose dependencies
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation("io.coil-kt:coil-compose:2.0.0-rc02")
     implementation "com.airbnb.android:lottie-compose:5.0.3"
+    implementation "androidx.compose.runtime:runtime-livedata:1.2.0-alpha05"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
 
+    // accompanist
     implementation "com.google.accompanist:accompanist-navigation-animation:0.24.5-alpha"
     implementation "com.google.accompanist:accompanist-permissions:0.24.3-alpha"
 
+    // splash screen
     implementation "androidx.core:core-splashscreen:1.0.0-beta01"
 
     // Timber for logging
@@ -81,6 +88,30 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
     implementation "androidx.camera:camera-view:${camerax_version}"
     implementation "androidx.camera:camera-extensions:${camerax_version}"
-
+    
+    // mlkit object detection
     implementation 'com.google.mlkit:object-detection-custom:17.0.0'
+
+    // Retrofit for network requests
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    // Room
+    def room_version = "2.4.2"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // Hilt
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    kapt "com.google.dagger:hilt-compiler:2.38.1"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
+
+    // Location
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
+
+    // WorkManager
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
+    implementation 'androidx.hilt:hilt-work:1.0.0'
 }
