--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     // extra compose dependencies
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation("io.coil-kt:coil-compose:2.0.0-rc02")
-    implementation "com.airbnb.android:lottie-compose:5.0.3"
+//    implementation "com.airbnb.android:lottie-compose:5.0.3"
     implementation "androidx.compose.runtime:runtime-livedata:1.2.0-alpha05"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
 
@@ -114,4 +114,7 @@ dependencies {
     // WorkManager
     implementation "androidx.work:work-runtime-ktx:2.7.1"
     implementation 'androidx.hilt:hilt-work:1.0.0'
+
+    // Data Store
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
