Add mapview and viewmodel

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,4 +117,8 @@ dependencies {
 
     // Data Store
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    // Map
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.maps.android:maps-compose:1.2.0'
 }
