--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,4 +121,7 @@ dependencies {
     // Map
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'com.google.maps.android:maps-compose:1.2.0'
+
+    // JWT
+    implementation 'io.jsonwebtoken:jjwt:0.7.0'
 }
