--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,7 +91,7 @@ dependencies {
     implementation "androidx.camera:camera-extensions:${camerax_version}"
     
     // mlkit object detection
-    implementation 'com.google.mlkit:object-detection-custom:17.0.0'
+//    implementation 'com.google.mlkit:object-detection-custom:17.0.0'
 
     // Retrofit for network requests
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
