--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,13 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("local.properties").newDataInputStream())
+
+        manifestPlaceholders = [MAPS_API_KEY: "${properties.getProperty('MAPS_API_KEY')}"]
+        buildConfigField "String", "OPEN_WEATHER_APP_ID", "\"${properties.getProperty("OPEN_WEATHER_APP_ID")}\""
+
     }
 
     buildTypes {
